--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "grunt-contrib-uglify": "~2",
     "grunt-mocha": "*",
     "grunt-eslint": "*",
-    "grunt-githooks": "*",
-    "grunt-git": "rubenv/grunt-git"
+    "grunt-githooks": "*"   
   }
 }
