--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,8 @@ branches:
 before_install: 
 - npm install --prefix ./TravisCI grunt-cli -g
 - chmod +x TravisCI/push.sh
-- ls -LR
-- cd TravisCI
 script:
-- grunt default
+- grunt --base TravisCI default
 after_success:
 - "TravisCI/push.sh"
 env:
