--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 - npm install --prefix ./TravisCI grunt-cli -g
 - chmod +x TravisCI/push.sh
 script:
-- grunt --base TravisCI default
+- grunt --base /TravisCI default
 after_success:
 - "TravisCI/push.sh"
 env:
